[package]
name = "busfactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
octocrab = "0.12"
tokio = { version = "1.6.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_path_to_error = "0.1.4"
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8.4"